sonar.txt
Run ./gradle-4.10.1/bin/gradle sonarqube \
Starting a Gradle Daemon, 1 incompatible Daemon could not be reused, use --status for details

> Configure project :
org.gradle.api.plugins.HelpTasksPlugin@557a5fe6
org.gradle.language.base.plugins.LifecycleBasePlugin@407ea875
org.gradle.api.plugins.BasePlugin@56259ca0
org.gradle.api.plugins.ReportingBasePlugin@7274d0a2
org.gradle.api.plugins.JavaBasePlugin@d6c837a
org.gradle.api.plugins.JavaPlugin@38e4afa2
org.gradle.api.plugins.WarPlugin@42def482
org.gradle.platform.base.plugins.ComponentBasePlugin@16fbddbb
org.gradle.language.base.plugins.LanguageBasePlugin@7f65fb4d
org.gradle.platform.base.plugins.BinaryBasePlugin@62e1c2bc
org.gradle.api.plugins.JavaBasePluginRules@57ae4086
org.gradle.api.publish.plugins.PublishingPlugin@1f7049cd
org.gradle.api.publish.maven.plugins.MavenPublishPlugin@4f1f66fd
vr.plugin.ManifestClasspathPlugin@2307a980
org.sonarqube.gradle.SonarQubePlugin@6087716
classpath:: file collection
archiveName:: smedigitalbank-1111.war

> Task :generateDAL NO-SOURCE
> Task :generateER NO-SOURCE
> Task :generateOpenAPI NO-SOURCE
> Task :generateService NO-SOURCE
> Task :generateTAO NO-SOURCE
> Task :generateVO NO-SOURCE

> Task :compileJava
warning: Supported source version 'RELEASE_8' from annotation processor 'org.gradle.api.internal.tasks.compile.processing.NonIncrementalProcessor' less than -source '11'
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:9: error: package javax.xml.soap does not exist

import javax.xml.soap.MessageFactory;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:10: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnection;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:11: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:12: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPMessage;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:13: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPPart;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:34: error: cannot find symbol
	private static MessageFactory soapMsgFactory;
	               ^
  symbol:   class MessageFactory
  location: class CustomRAKSOAPWebServiceClient
6 errors
1 warning

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org
> Task :compileJava FAILED

Deprecated Gradle features were used in this build, making it incompatible with Gradle 5.0.
Use '--warning-mode all' to show the individual deprecation warnings.
See https://docs.gradle.org/4.10.1/userguide/command_line_interface.html#sec:command_line_warnings
1 actionable task: 1 executed

BUILD FAILED in 27s
Error: Process completed with exit code 1.
